manifests/ingress(AGIC).yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delete-task-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: delete-task.ak4t7.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: delete-task
            port: 
              number: 80
